#3 Fix name analysis docs.

--- a/report/datasets_report.Rmd
+++ b/report/datasets_report.Rmd
@@ -23,7 +23,7 @@ project_id <- params$project_id
   #params$project_id
 #}
 
-dir_in <- "../projects/"
+dir_in <- "../scripts/projects/"
 
 file_git_commits <- "git_commits_evol.csv"
 url_git_commits <- paste( dir_in, project_id, "/", file_git_commits, sep="" )
