#5 Fix rmarkdown doc for mboxes.

--- a/datasets/eclipse_mls/mbox_csv_analysis.rmd
+++ b/datasets/eclipse_mls/mbox_csv_analysis.rmd
@@ -13,7 +13,7 @@ output:
     toc: yes
     toc_depth: '2'
 params:
-  project: downloads/eclipse_mls_clean.csv
+  project: eclipse_mls_full.csv
 ---
 
 ```{r init, message=FALSE, echo=FALSE}
