--- a/datasets/aeri_stacktraces/incidents_analysis.rmd
+++ b/datasets/aeri_stacktraces/incidents_analysis.rmd
@@ -7,6 +7,8 @@ output:
     toc: yes
     toc_depth: 3
     keep_tex: true
+    extra_dependencies:
+      - tikz
   html_document:
     toc: yes
     toc_depth: 2
