--- a/datasets/aeri_stacktraces/problems_analysis.rmd
+++ b/datasets/aeri_stacktraces/problems_analysis.rmd
@@ -8,7 +8,7 @@ output:
     toc_depth: 3
     keep_tex: true
     extra_dependencies:
-      - tikz
+      - grffile
   html_document:
     toc: yes
     toc_depth: 2
