--- a/report/datasets_report_forums.Rmd
+++ b/report/datasets_report_forums.Rmd
@@ -14,11 +14,20 @@ File is [``r url_forums_posts``](`r file_forums_posts`), and has ``r ncol(data)`
 ```{r forums_posts_evol}
 data$created.date <- as.POSIXct(data$created_date, origin="1970-01-01")
 posts.xts <- xts(data, order.by = data$created.date)
-posts.weekly <- apply.weekly(x=posts.xts, FUN = nrow)
+
+time.min <- index(posts.xts[1,])
+time.max <- index(posts.xts[nrow(posts.xts)])
+all.dates <- seq(time.min, time.max, by="weeks")
+empty <- xts(order.by = all.dates)
+
+merged.data <- merge(empty, posts.xts$id, all=T)
+merged.data[is.na(merged.data) == T] <- 0
+
+posts.weekly <- apply.weekly(x=merged.data, FUN = nrow)
 names(posts.weekly) <- c("posts")
 
 p <- dygraph(
-  data = posts.weekly,
+  data = posts.weekly[-1,],
   main = paste('Weekly forum posts for ', project_id, sep=''),
   width = 800, height = 250 ) %>%
   dyAxis("x", drawGrid = FALSE) %>%
