--- a/report/datasets_report_forums.Rmd
+++ b/report/datasets_report_forums.Rmd
@@ -9,7 +9,7 @@
 data <- read.csv(file=url_forums_posts, header=T)
 ```
 
-File is [``r url_forums_posts``](`r file_forums_posts`), and has ``r ncol(data)`` columns for ``r nrow(data)`` posts. The evolution of posts
+File is [``r url_forums_posts``](`r file_forums_posts`.gz), and has ``r ncol(data)`` columns for ``r nrow(data)`` posts. The evolution of posts
 
 ```{r forums_posts_evol}
 data$created.date <- as.POSIXct(data$created_date, origin="1970-01-01")
@@ -65,7 +65,7 @@ print(
 data <- read.csv(file=url_forums_threads, header=T)
 ```
 
-File is [``r url_forums_threads``](`r file_forums_threads`), and has ``r ncol(data)`` columns for ``r nrow(data)`` threads. A wordcloud with the main words used in threads is presented below.
+File is [``r url_forums_threads``](`r file_forums_threads`.gz), and has ``r ncol(data)`` columns for ``r nrow(data)`` threads. A wordcloud with the main words used in threads is presented below.
 
 ```{r forums_threads_viz, message=FALSE, echo=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 require(tm)
