--- a/report/datasets_report_forums.Rmd
+++ b/report/datasets_report_forums.Rmd
@@ -84,7 +84,9 @@ corpus <- tm_map(corpus, content_transformer(removeNumbers))
 corpus <- tm_map(corpus, removeWords, stopwords("english"))
 a <- tm_map(corpus, stemDocument)
 
+sink("/dev/null")
 wordcloud(a, scale=c(12,1), max.words=50, random.order=FALSE, rot.per=0.15, use.r.layout=FALSE, colors=brewer.pal(8, "Dark2"))
+sink()
 ```
 
 The list of the 10 last active threads on the forums:
